--- a/website/app/[locale]/(root)/docs/color/content.mdx
+++ b/website/app/[locale]/(root)/docs/color/content.mdx
@@ -1,15 +1,12 @@
 ## Overview [sr-only]
 <Overview/>
 
+---
+
 ## Basic usage
-### Color tokens
-Change the text color of an element using the default [color variables](/docs/colors).
-<Demo>
-    <div className="fg:blue font:56 font:heavy">Aa</div>
-</Demo>
-```html
-<div class="**fg:blue**">Aa</div>
-```
+### With opacity
+Add the suffix `/alpha` to change the opacity of any color.
+<Basic className="fg:blue/.15" />
 
 ---
 
