--- a/website/app/[locale]/(root)/docs/comparison/_page.mdx
+++ b/website/app/[locale]/(root)/docs/comparison/_page.mdx
@@ -58,7 +58,7 @@ export default function Why({ t }: any) {
                 </tbody>
                 <thead>
                     <tr>
-                        <th colSpan={4} className="pt:50 font:22">
+                        <th colSpan={4} className="pt:12x font:22">
                             Compile Mode
                         </th>
                     </tr>
@@ -123,7 +123,7 @@ export default function Why({ t }: any) {
                 </tbody>
                 <thead>
                     <tr>
-                        <th colSpan={4} className="pt:50 font:22">
+                        <th colSpan={4} className="pt:12x font:22">
                             Output Size
                         </th>
                     </tr>
@@ -174,7 +174,7 @@ export default function Why({ t }: any) {
                 </tbody>
                 <thead>
                     <tr>
-                        <th colSpan={4} className="pt:50 font:22">
+                        <th colSpan={4} className="pt:12x font:22">
                             Rendering
                         </th>
                     </tr>
@@ -211,7 +211,7 @@ export default function Why({ t }: any) {
                 </tbody>
                 <thead>
                     <tr>
-                        <th colSpan={4} className="pt:50 font:22">
+                        <th colSpan={4} className="pt:12x font:22">
                             Loading
                         </th>
                     </tr>
@@ -248,7 +248,7 @@ export default function Why({ t }: any) {
                 </tbody>
                 <thead>
                     <tr>
-                        <th colSpan={4} className="pt:50 font:22">
+                        <th colSpan={4} className="pt:12x font:22">
                             Developer Tools
                         </th>
                     </tr>
@@ -313,7 +313,7 @@ export default function Why({ t }: any) {
                 </tbody>
                 <thead>
                     <tr>
-                        <th colSpan={4} className="pt:50 font:22">
+                        <th colSpan={4} className="pt:12x font:22">
                             Syntax
                         </th>
                     </tr>
