--- a/website/app/[locale]/(root)/docs/installation/blazor/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/blazor/content.mdx
@@ -243,7 +243,7 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
 
                         <PageTitle>Index</PageTitle>
 
-                        +<h1 class="font:40 font:heavy italic m:50 text:center">
+                        +<h1 class="font:40 font:heavy italic m:12x text:center">
                         +    Hello World
                         +</h1>
 
