--- a/website/app/[locale]/(root)/docs/installation/esm-sh/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/esm-sh/content.mdx
@@ -25,7 +25,7 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
             </script>
         </head>
         <body>
-            <h1 class="**fg:primary** **font:40** **font:heavy** **italic** **m:50** **text:center**">Hello World</h1>
+            <h1 class="**fg:primary** **font:40** **font:heavy** **italic** **m:12x** **text:center**">Hello World</h1>
         </body>
         </html>
         ```
