--- a/website/app/[locale]/(root)/docs/installation/laravel/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/laravel/static-extraction/content.mdx
@@ -171,7 +171,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
         ```html name=resources/views/layouts/welcome.blade.php
         …
         <body>
-            <h1 class="**font:40** **font:heavy** **italic** **m:50** **text:center**">
+            <h1 class="**font:40** **font:heavy** **italic** **m:12x** **text:center**">
                 Hello World
             </h1>
         </body>
