--- a/website/app/[locale]/(root)/docs/installation/nextjs/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/nextjs/static-extraction/content.mdx
@@ -161,7 +161,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
         ```tsx name=app/page.tsx
         export default function Home() {
             return (
-                <h1 className="**font:40** **font:heavy** **italic** **m:50** **text:center**">Hello World</h1>
+                <h1 className="**font:40** **font:heavy** **italic** **m:12x** **text:center**">Hello World</h1>
             )
         }
         ```
