--- a/website/app/[locale]/(root)/docs/installation/nuxtjs/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/nuxtjs/content.mdx
@@ -125,7 +125,7 @@ import ProgressiveRenderingIntro from '../../rendering-modes/components/Progress
         Now style your first element using Master CSS syntax!
         ```html name=app.vue
         <template>
-            <h1 class="**font:40** **font:heavy** **italic** **m:50** **text:center**">Hello World</h1>
+            <h1 class="**font:40** **font:heavy** **italic** **m:12x** **text:center**">Hello World</h1>
         </template>
         ```
         <p className="mt:12x">Open your browser to watch the changes.</p>
