--- a/website/app/[locale]/(root)/docs/installation/nuxtjs/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/nuxtjs/static-extraction/content.mdx
@@ -119,7 +119,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
         ```html name=app.vue
         …
         <template>
-            <h1 class="**font:40** **font:heavy** **italic** **m:50** **text:center**">Hello World</h1>
+            <h1 class="**font:40** **font:heavy** **italic** **m:12x** **text:center**">Hello World</h1>
         </template>
         ```
         <p className="mt:12x">Open your browser to watch the changes.</p>
