--- a/website/app/[locale]/(root)/docs/installation/vuejs/runtime-rendering/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/vuejs/runtime-rendering/content.mdx
@@ -120,7 +120,7 @@ import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRe
         …
         <template>
             <CSSProvider :config="config">
-                <h1 class="**font:40** **font:heavy** **italic** **m:50** **text:center**">Hello World</h1>
+                <h1 class="**font:40** **font:heavy** **italic** **m:12x** **text:center**">Hello World</h1>
             </CSSProvider>
         </template>
         ```
