--- a/website/app/[locale]/(root)/docs/language-service/vscode/content.mdx
+++ b/website/app/[locale]/(root)/docs/language-service/vscode/content.mdx
@@ -36,7 +36,7 @@ The official Master CSS Language Service for Visual Studio Code extension.
         ### <StepNum />Start using Master CSS
         Now your IDE is more professional and readable than ever!
         ```html
-        <h1 class="font:40 font:56@sm font:heavy italic m:50 text:center fg:red:hover">
+        <h1 class="font:40 font:56@sm font:heavy italic m:12x text:center fg:red:hover">
             Hello World
         </h1>
         ```
