--- a/website/app/[locale]/(root)/docs/position/content.mdx
+++ b/website/app/[locale]/(root)/docs/position/content.mdx
@@ -37,13 +37,13 @@ Use `rel`to position an element according to the normal flow of the document, an
 ### Positioning elements as absolute
 Use `abs`to remove an element from the normal flow of the document, and the element positioned relative to its closest positioned ancestor.
 <Demo>
-    <code className="rel p:50! box bg-stripe">
+    <code className="rel p:12x! box bg-stripe">
         <div>relative parent</div>
         <code className="box-perspective-pink abs left:0 top:0 w:fit">abs child</code>
     </code>
 </Demo>
 ```html
-<div class="**rel** p:50">
+<div class="**rel** p:12x">
     <div>relative parent</div>
     <div class="**abs** left:0 top:0">abs child</div>
 </div>
