--- a/website/app/[locale]/(root)/docs/text-transform/content.mdx
+++ b/website/app/[locale]/(root)/docs/text-transform/content.mdx
@@ -37,9 +37,7 @@ Convert the first letter of each word to uppercase.
     </DemoPanel>
 </Demo>
 ```html
-<p class="**capitalize**">
-    **h**eavy **b**oxes **p**erform **q**uick **w**altzes **a**nd **j**igs.
-</p>
+<p class="**capitalize**">**h**eavy **b**oxes **p**erform **q**uick **w**altzes **a**nd **j**igs.</p>
 ```
 
 ### Lowercase text
@@ -50,9 +48,7 @@ Convert all characters to lowercase.
     </DemoPanel>
 </Demo>
 ```html
-<p class="**lowercase**">
-    **HEAVY BOXES PERFORM QUICK WALTZES AND JIGS.**
-</p>
+<p class="**lowercase**">**HEAVY BOXES PERFORM QUICK WALTZES AND JIGS.**</p>
 ```
 
 ### Uppercase text
@@ -63,9 +59,7 @@ Convert all characters to uppercase.
     </DemoPanel>
 </Demo>
 ```html
-<p class="**uppercase**">
-    **heavy boxes perform quick waltzes and jigs.**
-</p>
+<p class="**uppercase**">**heavy boxes perform quick waltzes and jigs.**</p>
 ```
 
 ### Sentence
@@ -76,9 +70,7 @@ Capitalize the first letter of a sentence.
     </DemoPanel>
 </Demo>
 ```html
-<p class="**uppercase::first-letter**">
-    **h**eavy boxes perform quick waltzes and jigs.
-</p>
+<p class="**uppercase::first-letter**">**h**eavy boxes perform quick waltzes and jigs.</p>
 ```
 
 ---
