--- a/website/app/[locale]/(root)/docs/global-styles/content.mdx
+++ b/website/app/[locale]/(root)/docs/global-styles/content.mdx
@@ -40,7 +40,7 @@ Fixed the inconsistent appearance of controls across browsers.
 ### Consistent horizontal lines
 Fixed the inconsistent appearance of horizontal lines across browsers.
 <Demo $py={0}>
-    <DemoPanel className="grid-cols:2 gap:30 gap:50@sm w:full">
+    <DemoPanel className="grid-cols:2 gap:30 gap:12x@sm w:full">
         <div>
             <small>Before</small>
             <hr className="mt:20! mb:0! {all:revert}" />
@@ -98,7 +98,7 @@ The `html <a>` element usually serves as more than just an inline text link; it 
 
 Removing its default underline and inheriting the parent color allows you to start with a clean style.
 <Demo $py={0}>
-    <DemoPanel className="grid-cols:2 gap:30 gap:50@sm">
+    <DemoPanel className="grid-cols:2 gap:30 gap:12x@sm">
         <div>
             <small>Before</small>
             <a href="#" className="mt:10 block text:underline fg:revert">Learn more</a>
@@ -181,13 +181,13 @@ Preset the maximum width of media-related elements to the parent container to ma
     <div className="grid-cols:2 gap:20">
         <div>
             <small>Before</small>
-            <div className="mt:10 b:1|crimson-60 square overflow:hidden">
+            <div className="mt:10 b:1|crimson-40 square overflow:hidden">
                 <Image src={require('~/public/images/chicken.png').default} width={500} height={500} alt="No responsive image" className="max-w:none" />
             </div>
         </div>
         <div>
             <small>After</small>
-            <div className="mt:10 b:1|green-60 square">
+            <div className="mt:10 b:1|green-40 square">
                 <Image src={require('~/public/images/chicken.png').default} width={500} height={500} alt="Responsive image" />
             </div>
         </div>
