--- a/website/app/[locale]/(root)/docs/installation/(tabs)/general/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/(tabs)/general/content.mdx
@@ -51,7 +51,7 @@ The easiest way to use Master CSS from scratch is to initialize the [runtime eng
         +    <script src="/main.js"></script>
         </head>
         <body>
-            <h1 class="**font:40** **font:heavy** **italic** **m:50** **text:center**">Hello World</h1>
+            <h1 class="**font:40** **font:heavy** **italic** **m:12x** **text:center**">Hello World</h1>
         </body>
         </html>
         ```
