--- a/website/app/[locale]/(root)/docs/installation/astro/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/astro/content.mdx
@@ -115,7 +115,7 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
         ---
         <Layout title="Welcome to Astro.">
             <main>
-                <h1 class="**font:40** **font:heavy** **italic** **m:50** **text:center**">Hello World</h1>
+                <h1 class="**font:40** **font:heavy** **italic** **m:12x** **text:center**">Hello World</h1>
             </main>
         </Layout>
         ```
