--- a/website/app/[locale]/(root)/docs/installation/astro/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/astro/static-extraction/content.mdx
@@ -127,7 +127,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
         ---
         <Layout title="Welcome to Astro.">
             <main>
-                <h1 class="**font:40** **font:heavy** **italic** **m:50** **text:center**">Hello World</h1>
+                <h1 class="**font:40** **font:heavy** **italic** **m:12x** **text:center**">Hello World</h1>
             </main>
         </Layout>
         ```
