--- a/website/app/[locale]/(root)/docs/installation/laravel/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/laravel/content.mdx
@@ -152,7 +152,7 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
         ```html name=resources/views/layouts/welcome.blade.php
         …
         <body>
-            <h1 class="**font:40** **font:heavy** **italic** **m:50** **text:center**">
+            <h1 class="**font:40** **font:heavy** **italic** **m:12x** **text:center**">
                 Hello World
             </h1>
         </body>
