--- a/website/app/[locale]/(root)/docs/installation/nextjs/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/nextjs/content.mdx
@@ -228,7 +228,7 @@ import ProgressiveRenderingIntro from '../../rendering-modes/components/Progress
         ```tsx name=app/page.tsx
         export default function Home() {
             return (
-                <h1 className="**font:40** **font:heavy** **italic** **m:50** **text:center**">Hello World</h1>
+                <h1 className="**font:40** **font:heavy** **italic** **m:12x** **text:center**">Hello World</h1>
             )
         }
         ```
