--- a/website/app/[locale]/(root)/docs/installation/nextjs/runtime-rendering/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/nextjs/runtime-rendering/content.mdx
@@ -162,7 +162,7 @@ import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRe
         ```tsx name=app/page.tsx
         export default function Home() {
             return (
-                <h1 className="**font:40** **font:heavy** **italic** **m:50** **text:center**">Hello World</h1>
+                <h1 className="**font:40** **font:heavy** **italic** **m:12x** **text:center**">Hello World</h1>
             )
         }
         ```
