--- a/website/app/[locale]/(root)/docs/installation/nuxtjs/runtime-rendering/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/nuxtjs/runtime-rendering/content.mdx
@@ -126,7 +126,7 @@ import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRe
         Now style your first element using Master CSS syntax!
         ```html name=app.vue
         <template>
-            <h1 class="**font:40** **font:heavy** **italic** **m:50** **text:center**">Hello World</h1>
+            <h1 class="**font:40** **font:heavy** **italic** **m:12x** **text:center**">Hello World</h1>
         </template>
         ```
         <p className="mt:12x">Open your browser to watch the changes.</p>
