--- a/website/app/[locale]/(root)/docs/installation/react/runtime-rendering/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/react/runtime-rendering/content.mdx
@@ -125,7 +125,7 @@ import RuntimeRenderingIntro from '../../../rendering-modes/components/RuntimeRe
         ```tsx name=src/App.tsx
         export default function App() {
             return (
-                <h1 className="**font:40** **font:heavy** **italic** **m:50** **text:center**">Hello World</h1>
+                <h1 className="**font:40** **font:heavy** **italic** **m:12x** **text:center**">Hello World</h1>
             )
         }
         ```
