--- a/website/app/[locale]/(root)/docs/installation/vite/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/vite/content.mdx
@@ -124,7 +124,7 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
         <html lang="en" style="display: none">
             …
             <body>
-        +        <h1 class="font:40 font:heavy italic m:50 text:center">Hello World</h1>
+        +        <h1 class="font:40 font:heavy italic m:12x text:center">Hello World</h1>
                 …
             </body>
         </html>
