--- a/website/app/[locale]/(root)/docs/installation/vite/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/vite/static-extraction/content.mdx
@@ -128,7 +128,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
         <html lang="en" style="display: none">
             …
             <body>
-        +        <h1 class="font:40 font:heavy italic m:50 text:center">Hello World</h1>
+        +        <h1 class="font:40 font:heavy italic m:12x text:center">Hello World</h1>
                 …
             </body>
         </html>
