--- a/website/app/[locale]/(root)/docs/installation/vuejs/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/vuejs/static-extraction/content.mdx
@@ -118,7 +118,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
         …
         <template>
             <CSSProvider :config="config">
-                <h1 class="**font:40** **font:heavy** **italic** **m:50** **text:center**">Hello World</h1>
+                <h1 class="**font:40** **font:heavy** **italic** **m:12x** **text:center**">Hello World</h1>
             </CSSProvider>
         </template>
         ```
