--- a/website/app/[locale]/(root)/docs/installation/webpack/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/webpack/content.mdx
@@ -172,7 +172,7 @@ import RuntimeRenderingIntro from '../../rendering-modes/components/RuntimeRende
             <script src="./index.js"></script>
         </head>
         <body>
-            <h1 class="**font:40** **font:heavy** **italic** **m:50** **text:center**">Hello World</h1>
+            <h1 class="**font:40** **font:heavy** **italic** **m:12x** **text:center**">Hello World</h1>
         </body>
         </html>
         ```
