--- a/website/app/[locale]/(root)/docs/installation/webpack/static-extraction/content.mdx
+++ b/website/app/[locale]/(root)/docs/installation/webpack/static-extraction/content.mdx
@@ -174,7 +174,7 @@ import StaticExtractionIntro from '../../../rendering-modes/components/StaticExt
             <script src="./index.js"></script>
         </head>
         <body>
-            <h1 class="**font:40** **font:heavy** **italic** **m:50** **text:center**">Hello World</h1>
+            <h1 class="**font:40** **font:heavy** **italic** **m:12x** **text:center**">Hello World</h1>
         </body>
         </html>
         ```
