--- a/website/app/[locale]/(root)/docs/markup-driven/components/PrematureAbstraction.mdx
+++ b/website/app/[locale]/(root)/docs/markup-driven/components/PrematureAbstraction.mdx
@@ -62,7 +62,7 @@ import mountainImage from '~/public/images/mountain.jpg'
 
 <Demo>
     <div className="mx:auto max-w:480">
-        <div className="flex translateY(-5):hover ~transform|.2s overflow:hidden bg:panel r:10 shadow:panel center-content">
+        <div className="flex translateY(-5):hover ~transform|.2s overflow:hidden bg:surface r:10 s:panel center-content">
             <Image className="object:cover aspect:1/1 flex:0|0|auto" src={mountainImage} placeholder="blur" width={140} height={140} priority={true} alt="Markup-driven CSS Overview" />
             <div className="p:25">
                 <div className="fg:strong font:semibold text:18">Mountain</div>
