--- a/website/app/[locale]/(root)/docs/rendering-modes/runtime-rendering/content.mdx
+++ b/website/app/[locale]/(root)/docs/rendering-modes/runtime-rendering/content.mdx
@@ -19,7 +19,7 @@ Take the most convenient [CDN](/docs/installtion/cdn) as an example:
     …
 </head>
 <body>
-    <h1 class="font:40 font:heavy italic m:50 text:center">Hello World</h1>
+    <h1 class="font:40 font:heavy italic m:12x text:center">Hello World</h1>
 </body>
 </html>
 ```
