--- a/website/app/[locale]/(root)/docs/screen-sizes/content.mdx
+++ b/website/app/[locale]/(root)/docs/screen-sizes/content.mdx
@@ -37,3 +37,4 @@ Fixed element width to a screen size as a responsive container.
 ```html
 <div class="**max-w:screen-sm@sm** **max-w:screen-md@md** **max-w:screen-lg@lg** …">…</div>
 ```
+To customize the responsive breakpoints, like `@sm`, define [media queries](/docs/media-queries).
