--- a/website/app/[locale]/(root)/docs/cursor/content.mdx
+++ b/website/app/[locale]/(root)/docs/cursor/content.mdx
@@ -6,7 +6,8 @@
 ## Basic usage
 ### Set the cursor style
 Use the `cursor:value` to change the mouse cursor when hovering an element.
-<InteractingIndicator>Hovering the button to see the cursor style</InteractingIndicator>
+
+(hover) Hovering the button to see the cursor style
 <Demo className="gap:40">
     <button className="fg:white bg:indigo px:20 h:42 font:14 font:semibold r:5 cursor:pointer">submit</button>
 </Demo>
